Updates from Overleaf

--- a/sec_results.tex
+++ b/sec_results.tex
@@ -20,16 +20,16 @@
 \end{figure}
 
 Two-dimensional correlation distributions in $\sqrt{s}=13$ TeV pp collisions are shown in Fig.~\ref{fig:doubleridge} for the high-multiplicity (0--0.1\%, left), low-multiplicity (60--90\%, middle), and the subtracted one as (0--5)\%-$F$(60--100\%) on the right. Similarly, the ones in $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV p-Pb collisions are shown in Fig.~\ref{fig:doubleridgepPb}. The $F$ values can be found in Tab.~\ref{tab:Fpp} and \ref{tab:FpPb}, which come from the LM-template fit in a given multiplicity percentile as described in Sec.~\ref{sec:ana}. 
-The $z$-axes for the yield of the correlations is properly scaled in order to zoom in on the larger $\Delta\eta$, as a result, the jet peaks are sheared off in both figures. The flow modulations structure is clearly observed in the HM class while it is not seen in the LM-template. The away-side regions are populated mostly by back-to-back jet correlations for the HM and LM events but they are reduced and comparable to the one in near-side in $\Delta\eta > 1.6$. The jet peak in near-side region is remaining on the LM subtracted ones and the LM-template fit uses only $1.6< \Delta\eta < 1.8$.
+The $z$-axes for the yield of the correlations is properly scaled in order to zoom in the larger $\Delta\eta$ region, as a result, the jet peaks are sheared off in both figures. The flow modulations structure is clearly observed in the HM class while it is not seen in the LM-template. The away-side regions are populated mostly by back-to-back jet correlations for the HM and LM events but they are reduced and comparable to the one in near-side in $\Delta\eta > 1.6$. The jet peak in near-side region is remaining on the LM subtracted ones and the LM-template fit uses only $1.6< \Delta\eta < 1.8$.
 
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.9 \textwidth]{figures/Fig2_vn.pdf} 
-	\caption{The magnitude of $v_2$ (left) and $v_3$ (right) as a function of $p_\mathrm{T}$ for ALICE (black) and ATLAS (blue).}
+	\caption{The magnitude of $v_2$ (left) and $v_3$ (right) as a function of $p_\mathrm{T}$. The results are compared to ATLAS measurements~\cite{Aaboud:2016yar}. Note that the event multiplicity definition, $p_{\mathrm{T},assoc}$ range, and $|\Delta\eta|$ acceptance are different.}
 	\label{fig:vn}
 \end{figure}
 
-The extracted $v_2$ and $v_3$ are shown as a function of $p_{\mathrm{T},trig}$ (GeV/c) in Fig.~\ref{fig:vn}. These results are obtained from the $\sqrt{s}=13$ TeV pp LM-template fits for the high multiplicity percentile of $0-0.1\%$. The results are compared to ATLAS results in~\cite{Aaboud:2016yar} where the same method was used to extract $v_2$ and $v_3$. It should be noted that the $\Delta\eta$ and $p_{\mathrm{T},assoc}$ ranges are larger in the ATLAS results at $2.0<|\Delta\eta|<5.0$ and $0.5<p_{\mathrm{T},assoc}<5$ GeV/c, respectively.
+The extracted $v_2$ and $v_3$ are shown as a function of $p_{\mathrm{T},trig}$ (GeV/c) in Fig.~\ref{fig:vn}. These results are obtained from the $\sqrt{s}=13$ TeV pp LM-template fits for the high multiplicity percentile of $0-0.1\%$. The results are compared to ATLAS results in~\cite{Aaboud:2016yar} where the same method was used to extract $v_2$ and $v_3$. It should be noted that the $\Delta\eta$ and $p_{\mathrm{T},assoc}$ ranges are larger in the ATLAS results at $2.0<|\Delta\eta|<5.0$ and $0.5<p_{\mathrm{T},assoc}<5$ GeV/c, respectively. 
 
 
 
