improve on sec. results and fixing on confusion on pt trigger, assoc

--- a/paper.bib
+++ b/paper.bib
@@ -1674,3 +1674,17 @@ author = "G.I. Kopylov"
     pages = "164--177",
     year = "2013"
 }
+@article{ALICE:2018yph,
+    author = "Acharya, S. and others",
+    collaboration = "ALICE",
+    title = "{Anisotropic flow of identified particles in Pb-Pb collisions at $ {\sqrt{s}}_{\mathrm{NN}}=5.02 $ TeV}",
+    eprint = "1805.04390",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-EP-2018-103",
+    doi = "10.1007/JHEP09(2018)006",
+    journal = "JHEP",
+    volume = "09",
+    pages = "006",
+    year = "2018"
+}
