--- a/sec_results.tex
+++ b/sec_results.tex
@@ -29,7 +29,7 @@ The $z$-axes for the yield of the correlations is properly scaled in order to zo
 	\label{fig:vn}
 \end{figure}
 
-The extracted $v_2$ and $v_3$ are shown as a function of $p_{\mathrm{T},trig}$ (GeV/c) in Fig.~\ref{fig:vn}. These results are obtained from the $\sqrt{s}=13$ TeV pp LM-template fits for the high multiplicity percentile of $0-0.1\%$. The results are compared to ATLAS results in~\cite{Aaboud:2016yar} where the same method was used to extract $v_2$ and $v_3$. It should be noted that the $\Delta\eta$ and $p_{\mathrm{T},assoc}$ ranges are larger in the ATLAS results at $2.0<|\Delta\eta|<5.0$ and $0.5<p_{\mathrm{T},assoc}<5$ GeV/c, respectively. 
+The extracted $v_2$ and $v_3$ are shown as a function of $p_{\mathrm{T},\mathrm{trig}}$ in Fig.~\ref{fig:vn}. These results are obtained from the $\sqrt{s}=13$ TeV pp LM-template fits for the high multiplicity percentile of $0-0.1\%$. The results are compared to ATLAS results~\cite{Aaboud:2016yar} where the same method was used to extract the flow coefficients. Even though the $\Delta\eta$ and $p_{\mathrm{T},\mathrm{assoc}}$ ranges are wider in the ATLAS results at $2.0<|\Delta\eta|<5.0$ and $0.5<p_{\mathrm{T},assoc}<5\,\mathrm{GeV}/c$, respectively, the results are consistent within the uncertainties. This is expected because the $\eta$ and multiplicity dependence of $v_n$ are expected to be small and $p_{\mathrm{T}}$ ranges are similar. Both results indicate that the overall magnitudes of the $v_n$ are larger at higher values of $p_{\mathrm{T},\mathrm{trig}}$, with maximum between $2.5<p_{\mathrm{T},\mathrm{trig}}<3.0$ GeV/c, which is similar to the results from Pb--Pb collisions~\cite{ALICE:2018yph}.
 
 
 
@@ -40,7 +40,7 @@ The extracted $v_2$ and $v_3$ are shown as a function of $p_{\mathrm{T},trig}$ (
 	\label{fig:v2mult}
 \end{figure}
 
-In Fig.\ref{fig:v2mult} the magnitude of $v_2$ as a function of multiplicity is presented for both pp and p-Pb collisions, at $\sqrt{s}=13$ and $\sqrt{s_{NN}}=5.02$ TeV respectively. As in Fig.~\ref{fig:vn}, the large $\Delta\eta$ range is at $1.6<|\Delta\eta|<1.8$ and the associated particle $p_{\mathrm{T},assoc}$ acceptance is $1<p_{\mathrm{T},assoc}<4$ GeV/c for both collision systems. Additionally, pp collisions at 13 TeV with an associated particle $p_{\mathrm{T},assoc}$ acceptance of $1<p_{\mathrm{T},assoc}<2$ GeV/c is presented. The magnitude of $v_2$ is larger in p-Pb collisions, which was observed in Refs.~\cite{ATLAS:2015hzw,ATLAS:2016yzd, Khachatryan:2015lva}. For the two different $p_\mathrm{T}$ bins presented for the pp collisions, the $v_2$ for the $1.0<p_\mathrm{T}<4.0$ GeV/c bin is larger than $v_2$ for the $1.0<p_\mathrm{T}<2.0$ GeV/c bin. This agrees with what is observed in Fig.~\ref{fig:vn}, where the $v_2$ magnitude has its largest value between $2.5<\p_{\mathrm{T,trig}}<3.0$ GeV/c which is above the smaller $p_\mathrm{T}$ bin. The ratio in the bottom panel of Fig.~\ref{fig:v2mult} between the two $p_\mathrm{T}$ bins quantifies an increase of $1\%$ of the larger$p_\mathrm{T}$ bin.
+In Fig.\ref{fig:v2mult} the magnitude of $v_2$ as a function of multiplicity is presented for both pp and p-Pb collisions, at $\sqrt{s}=13$ and $\sqrt{s_{NN}}=5.02$ TeV respectively. As in Fig.~\ref{fig:vn}, the large $\Delta\eta$ range is at $1.6<|\Delta\eta|<1.8$ and the $v_2$ is measured $1<p_{\mathrm{T}}<4$ GeV/c for both collision systems. Additionally, pp collisions at 13 TeV with $1<p_{\mathrm{T}}<2$ GeV/c is presented. The magnitude of $v_2$ is larger in p-Pb collisions, which was observed in Refs.~\cite{ATLAS:2015hzw,ATLAS:2016yzd, Khachatryan:2015lva}. For the two different $p_\mathrm{T}$ bins presented for the pp collisions, the $v_2$ for the $1.0<p_\mathrm{T}<4.0$ GeV/c bin is larger than $v_2$ for the $1.0<p_\mathrm{T}<2.0$ GeV/c bin. This agrees with what is observed in Fig.~\ref{fig:vn}, where the $v_2$ magnitude has its largest value between $2.5<p_\mathrm{T}<3.0$ GeV/$c$. The ratio of the higher to low $p_\mathrm{T}$ results is shown in the bottom panel of Fig.~\ref{fig:v2mult}, showing about $1\%$ increase within the uncertainties.
 %comparison to ATLAS??
 %
 
@@ -52,4 +52,4 @@ In Fig.\ref{fig:v2mult} the magnitude of $v_2$ as a function of multiplicity is 
 	\label{fig:LPjet23}
 \end{figure}    
 
-Figure~\ref{fig:LPjet23} presents the extracted magnitude of $v_2$ and $v_3$ as function of the minimum $\ptlead$ ($\it{p}^{\rm{LP}}_{\rm{T,min}}$) and $\ptjet$ ($\it{p}^{\rm{jet}}_{\rm{T,min}}$) selections. Both event scale results are obtained from pp collisions at 13 TeV for the multiplicity class of $0-0.1\%$. In these results the leading particle is required to be within $|\eta|<0.9$ and the jets are reconstructed using the anti$-k_\mathrm{T}$ algorithm with R=0.4 and are required to be within $|\eta|<0.4$. Both $v_2$ and$v_3$ show weakly increasing or consistent trend with increasing event-scale selection, with a larger increase of $v_n$ magnitude for the event selection of jets. 
+Figure~\ref{fig:LPjet23} presents the extracted magnitude of $v_2$ and $v_3$ as function of the minimum $\ptlead$ ($\it{p}^{\rm{LP}}_{\rm{T,min}}$) and $\ptjet$ ($\it{p}^{\rm{jet}}_{\rm{T,min}}$) selections. Both event scale results are obtained from pp collisions at 13 TeV for the multiplicity class of $0-0.1\%$. In these results the leading particle is required to be within $|\eta|<0.9$ and the jets are reconstructed using the anti$-k_\mathrm{T}$ algorithm with R=0.4 and are required to be within $|\eta|<0.4$. Both $v_2$ and$v_3$ don't show any dependence on event-scale selection within the uncertainties, similarly observed for the ridge yields~\cite{ALICE:2021nir}. While  EPOS LHC model(PYTHIA 8 String Shoving) show a strong(weak)  event-scale dependence and two models show different jet yields, it would be interesting to check how flow coefficients are related to the event-scale selections. However, up to date, it is not possible to extract flow coefficients with this LM-temp;ate method for these models because both models exhibit flow or ridge signals in low-multiplicity events.
