--- a/sec_intro.tex
+++ b/sec_intro.tex
@@ -17,7 +17,7 @@ A summary of various explanations for the observed correlations in small systems
 
 Besides the hybrid models mentioned above, alternative approaches were developed to describe collectivity in small systems. A microscopic model for collectivity was implemented in the PYTHIA~8 event generator, which is based on interacting strings (string shoving) and is called the “string shoving model”~\cite{Bierlich:2017vhg}. In this model, strings repel each other in the transverse direction, which results in microscopic transverse pressure and, consequently, in long-range correlations. PYTHIA~8 with string shoving can qualitatively reproduce the near-side ($\Delta\varphi\sim0$) ridge yield measured by the CMS Collaboration~\cite{Khachatryan:2016txc}. This challenges the hydrodynamic picture and predicts modifications of the jet fragmentation properties~\cite{Bierlich:2019ixq}.
 
-Up to date, flow extraction methods in these small systems have not been fully understood due to the strong jet fragmentation bias. In order to remove the remaining non-flow contributions in i.e. cumulant methods~\cite{Acharya:2019vdf}, we perform a flow-extraction method using a low-multiplicity template. Flow coefficients in various high-multiplicity classes are extracted from the low-multiplicity template fit method. This template fit method allows one to subtract the enhanced away-side jet yields in high-multiplicity with respect to low-multiplicity events, possibly testing a lower limit of event multiplicity on the flow signal.
+Up to date, flow extraction methods in these small systems have not been fully understood due to the strong jet fragmentation bias. In order to remove the remaining non-flow contributions in i.e. cumulant methods~\cite{Bilandzic:2010jr, Acharya:2019vdf}, we perform a flow-extraction method using a low-multiplicity template. Flow coefficients in various high-multiplicity classes are extracted from the low-multiplicity template fit method. This template fit method allows one to subtract the enhanced away-side jet yields in high-multiplicity with respect to low-multiplicity events, possibly testing a lower limit of event multiplicity on the flow signal.
 
 It is expected that final-state interactions affect also produced jets if they are the source of collectivity in small systems. Proving the presence of jet quenching~\cite{Gyulassy:1990ye,Wang:1991xy} would be another crucial evidence of the existence of a high-density strongly-interacting system, possibly a QGP, in high-multiplicity pp collisions. However, there is no evidence observed so far for the jet quenching effect in high-multiplicity pp and p--Pb collisions~\cite{Khachatryan:2016odn,Adam:2016jfp,Adam:2016dau,Acharya:2017okq}. Jet fragmentation can be studied in two-particle angular correlations in short-range correlations around $(\Delta\eta$, $\Delta\varphi)=(0,0)$~\cite{Adam:2016tsv}.  
 
