--- a/sec_results.tex
+++ b/sec_results.tex
@@ -48,8 +48,10 @@ In Fig.\ref{fig:v2mult} the magnitude of $v_2$ as a function of multiplicity is 
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.6 \textwidth]{figures/Fig4_vn_LP.pdf}
-	\caption{The magnitude of $v_2$ (top) and $v_3$ (bottom) as a function of minimum $p_{\mathrm{T}}$ for leading particle (left) and jet (right).}
+	\caption{The magnitude of $v_2$ (top) and $v_3$ (bottom) as a function of the $\it{p}^{\rm{LP}}_{\rm{T,min}}$ (left) and $\it{p}^{\rm{jet}}_{\rm{T,min}}$ (right) in $\sqrt{s}=13$ pp collisions. The filled circles show measurement with ALICE. The statistical and systematic uncertainties are shown as vertical bars and boxes, respectively.}
 	\label{fig:LPjet23}
 \end{figure}    
 
-Figure~\ref{fig:LPjet23} presents the extracted magnitude of $v_2$ and $v_3$ as function of the minimum $\ptlead$ ($\it{p}^{\rm{LP}}_{\rm{T,min}}$) and $\ptjet$ ($\it{p}^{\rm{jet}}_{\rm{T,min}}$) selections. Both event scale results are obtained from pp collisions at 13 TeV for the multiplicity class of $0-0.1\%$. In these results the leading particle is required to be within $|\eta|<0.9$ and the jets are reconstructed using the anti$-k_\mathrm{T}$ algorithm with R=0.4 and are required to be within $|\eta|<0.4$. Both $v_2$ and$v_3$ don't show any dependence on event-scale selection within the uncertainties, similarly observed for the ridge yields~\cite{ALICE:2021nir}. While  EPOS LHC model(PYTHIA 8 String Shoving) show a strong(weak)  event-scale dependence and two models show different jet yields, it would be interesting to check how flow coefficients are related to the event-scale selections. However, up to date, it is not possible to extract flow coefficients with this LM-temp;ate method for these models because both models exhibit flow or ridge signals in low-multiplicity events.
+Figure~\ref{fig:LPjet23} presents the extracted magnitude of $v_2$ and $v_3$ as function of the minimum $\ptlead$ ($\it{p}^{\rm{LP}}_{\rm{T,min}}$) and $\ptjet$ ($\it{p}^{\rm{jet}}_{\rm{T,min}}$) selections. Both event scale results are obtained from pp collisions at 13 TeV for the multiplicity class of $0-0.1\%$. In these results the leading particle is required to be within $|\eta|<0.9$ and the jets are reconstructed using the anti$-k_\mathrm{T}$ algorithm with R=0.4 and are required to be within $|\eta|<0.4$. Both $v_2$ and$v_3$ don't show any dependence on event-scale selection within the uncertainties, similarly observed for the ridge yields~\cite{ALICE:2021nir}.
+%The $\pythiashoving$ model describes the ridge yields qualitatively while the $\epos$ model overestimating the ridge yield.
+While  EPOS LHC model (PYTHIA 8 String Shoving) show a strong (weak)  event-scale dependence and two models show different jet yields, it would be interesting to check how flow coefficients are related to the event-scale selections. However, up to date, it is not possible to extract flow coefficients with this LM-template method for these models because both models exhibit flow or ridge signals in low-multiplicity events.
