improving intro and result

--- a/paper.bib
+++ b/paper.bib
@@ -1700,3 +1700,41 @@ author = "G.I. Kopylov"
     pages = "044913",
     year = "2011"
 }
+% Multiplicidy dependece jet yields
+@article{ALICE:2019dfi,
+    author = "Acharya, Shreyasi and others",
+    collaboration = "ALICE",
+    title = "{Charged-particle production as a function of multiplicity and transverse spherocity in pp collisions at $\sqrt{s} =5.02$ and 13 TeV}",
+    eprint = "1905.07208",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-EP-2019-094",
+    doi = "10.1140/epjc/s10052-019-7350-y",
+    journal = "Eur. Phys. J. C",
+    volume = "79",
+    number = "10",
+    pages = "857",
+    year = "2019"
+}
+@article{Parkkila:2021tqq,
+    author = "Parkkila, J. E. and Onnerstad, A. and Kim, D. J.",
+    title = "{Bayesian estimation of the specific shear and bulk viscosity of the quark-gluon plasma with additional flow harmonic observables}",
+    eprint = "2106.05019",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1103/PhysRevC.104.054904",
+    journal = "Phys. Rev. C",
+    volume = "104",
+    number = "5",
+    pages = "054904",
+    year = "2021"
+}
+@article{Parkkila:2021yha,
+    author = "Parkkila, J. E. and Onnerstad, A. and Taghavi, F. and Mordasini, C. and Bilandzic, A. and Kim, D. J.",
+    title = "{New constraints for QCD matter from improved Bayesian parameter estimation in heavy-ion collisions at LHC}",
+    eprint = "2111.08145",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    month = "11",
+    year = "2021"
+}
