--- a/sec_summary.tex
+++ b/sec_summary.tex
@@ -6,4 +6,7 @@ Long-range correlations for pairs of charged particles with two-particle angular
 %Verification of the non-flow subtraction, demonstrating the importance of publishing the extracted jet yields (data and theory) together with flow results
 %Testing lower limit of event multiplicity on flow signal both for pp and p--Pb
 %Comparison to different experiment, suggesting a possible apple-to-apple comparison
-These results show a weak multiplicity dependence on $v_2$ both for pp and p--Pb collisions, a hint of disappearing $v_2$ signal below $N_{ch}$=10 in $\eta|<0.5$. Furthermore, the events with hard probes such as jets or leading particles doesn't show any changes in $v_2$ within the uncertainties.
+These results are consistent with ATLAS, and $v_n$ gets larger for higher $p_\mathrm{T}$, and maximum at $2.5<p_\mathrm{T}<3.0$ GeV/c. 
+Additionally, they show a weak multiplicity dependence on $v_2$ both for pp and p--Pb collisions, and a hint of disappearing $v_2$ signal below $N_{ch}$ = 10 in $\eta|<0.5$. Furthermore, the events with hard probes such as jets or leading particles does not show any changes in $v_2$ within the uncertainties. 
+Even though it would be interesting to compare these results to EPOS LHC and PYTHIA8 String Shoving models as done in \cite{ALICE:2012eyl} for the ridge yields, it is not possible to extract flow coefficients properly because these models exhibit flow or ridge signals in low-multiplicity events. We leave this comparison for future research work.
+
