jasper and anna's update

--- a/paper.bib
+++ b/paper.bib
@@ -1730,11 +1730,47 @@ author = "G.I. Kopylov"
     year = "2021"
 }
 @article{Parkkila:2021yha,
-    author = "Parkkila, J. E. and Onnerstad, A. and Taghavi, F. and Mordasini, C. and Bilandzic, A. and Kim, D. J.",
+    author = "Parkkila, J. E. and Onnerstad, A. and Taghavi, S. F. and Mordasini, C. and Bilandzic, A. and Kim, D. J.",
     title = "{New constraints for QCD matter from improved Bayesian parameter estimation in heavy-ion collisions at LHC}",
     eprint = "2111.08145",
     archivePrefix = "arXiv",
     primaryClass = "hep-ph",
     month = "11",
     year = "2021"
+}
+@article{Moreland:2014oya,
+	author = "Moreland, J. Scott and Bernhard, Jonah E. and Bass, Steffen A.",
+	title = "{Alternative ansatz to wounded nucleon and binary collision scaling in high-energy nuclear collisions}",
+	eprint = "1412.4708",
+	archivePrefix = "arXiv",
+	primaryClass = "nucl-th",
+	doi = "10.1103/PhysRevC.92.011901",
+	journal = "Phys. Rev. C",
+	volume = "92",
+	number = "1",
+	pages = "011901",
+	year = "2015"
+}
+@article{Bass:1998ca,
+	author = "Bass, S.A. and others",
+	title = "{Microscopic models for ultrarelativistic heavy ion collisions}",
+	eprint = "nucl-th/9803035",
+	archivePrefix = "arXiv",
+	doi = "10.1016/S0146-6410(98)00058-1",
+	journal = "Prog. Part. Nucl. Phys.",
+	volume = "41",
+	pages = "255--369",
+	year = "1998"
+}
+
+@article{Bleicher:1999xi,
+	author = "Bleicher, M. and others",
+	title = "{Relativistic hadron hadron collisions in the ultrarelativistic quantum molecular dynamics model}",
+	eprint = "hep-ph/9909407",
+	archivePrefix = "arXiv",
+	doi = "10.1088/0954-3899/25/9/308",
+	journal = "J. Phys. G",
+	volume = "25",
+	pages = "1859--1896",
+	year = "1999"
 }
