--- a/paper.tex
+++ b/paper.tex
@@ -10,6 +10,7 @@
 \usepackage {multirow}% Multi row in the table
 \usepackage {units}
 \usepackage {array}
+\usepackage[dvipsnames]{xcolor}
 \linenumbers
 
 \input{commands.tex}
@@ -35,8 +36,7 @@
 \begin{abstract}
 %\input{abstract.tex}
 Long- and short-range correlations for pairs of charged particles with two-particle angular correlations are studied in ${\sqrt{{\textit s}}}=13$~TeV pp and ${\sqrt{{\textit s_{NN}}}}=5$~TeV p--Pb collisions. The correlation functions are measured as a function of relative azimuthal angle $\Delta\varphi$, and pseudorapidity separation $\Delta\eta$, using charged particles within the pseudorapidity interval $\eta < 0.9$ with 1~$ < \pt < $~4~GeV/$c$.
-Fourier coefficients extracted from the long-range correlations ($\Delta\eta > 1.6$) in various high-multiplicity classes are extracted from the low-multiplicity template fit method which allows one to subtract the enhanced away-side jet yields in high-multiplicity with respect to low-multiplicity events. These results set a lower limit of event multiplicity on the flow signal. Furthermore, the flow measurements with the requirement of hard probes such as jets or leading particles are presented. The results are compared to EPOS LHC, PYTHIA 8 calculations with
-string-shoving interactions, and hydrodynamic calculations.
+Fourier coefficients extracted from the long-range correlations ($\Delta\eta > 1.6$) in various high-multiplicity classes are extracted from the low-multiplicity template fit method which allows one to subtract the enhanced away-side jet yields in high-multiplicity with respect to low-multiplicity events. These results set a lower limit of event multiplicity on the flow signal. Furthermore, the flow measurements with the requirement of hard probes such as jets or leading particles are presented. The results are compared to EPOS LHC, PYTHIA 8 calculations with string-shoving interactions, and hydrodynamic calculations.
 % findings , physics conclusion.
 % discovery?
 
