--- a/sec_results.tex
+++ b/sec_results.tex
@@ -38,9 +38,8 @@ The extracted $v_2$ and $v_3$ are shown as a function of $p_{\mathrm{T},\mathrm{
 	\label{fig:v2mult}
 \end{figure}
 
-In Fig.\ref{fig:v2mult} the magnitude of $v_2$ as a function of multiplicity is presented for both pp and p-Pb collisions, at $\sqrt{s}=13$ and $\sqrt{s_{NN}}=5.02$ TeV respectively. As in Fig.~\ref{fig:vn}, the large $\Delta\eta$ range is at $1.6<|\Delta\eta|<1.8$ and the $v_2$ is measured $1<p_{\mathrm{T}}<4$ GeV/c for both collision systems. Additionally, pp collisions at 13 TeV with $1<p_{\mathrm{T}}<2$ GeV/c is presented. The magnitude of $v_2$ is larger in p-Pb collisions, which was observed in Refs.~\cite{ATLAS:2015hzw,ATLAS:2016yzd, Khachatryan:2015lva}. For the two different $p_\mathrm{T}$ bins presented for the pp collisions, the $v_2$ for the $1.0<p_\mathrm{T}<4.0$ GeV/c bin is larger than $v_2$ for the $1.0<p_\mathrm{T}<2.0$ GeV/c bin. This agrees with what is observed in Fig.~\ref{fig:vn}, where the $v_2$ magnitude has its largest value between $2.5<p_\mathrm{T}<3.0$ GeV/$c$. The ratio of the higher to low $p_\mathrm{T}$ results is shown in the bottom panel of Fig.~\ref{fig:v2mult}, showing about $1\%$ increase within the uncertainties.
-%comparison to ATLAS??
-%
+In Fig.\ref{fig:v2mult} the magnitude of $v_2$ as a function of multiplicity is presented for both pp and p--Pb collisions, at $\sqrt{s}=13$ and $\sqrt{s_\mathrm{NN}}=5.02$ TeV respectively. As in Fig.~\ref{fig:vn}, the large $\Delta\eta$ range is at $1.6<|\Delta\eta|<1.8$ and the $v_2$ is measured $1<p_{\mathrm{T}}<4\,\mathrm{GeV}/c$ for both collision systems. Additionally, pp collisions at 13 TeV with $1<p_{\mathrm{T}}<2$ GeV/c is presented. The magnitude of $v_2$ is larger in p--Pb collisions, which was observed in Refs.~\cite{ATLAS:2015hzw,ATLAS:2016yzd, Khachatryan:2015lva}. For the two different $p_\mathrm{T}$ bins presented for the pp collisions, the $v_2$ for the $1.0<p_\mathrm{T}<4.0$ GeV/c bin is larger than $v_2$ for the $1.0<p_\mathrm{T}<2.0\,\mathrm{GeV}/c$ bin. This agrees with what is observed in Fig.~\ref{fig:vn}, where the $v_2$ magnitude has its largest value between $2.5<p_\mathrm{T}<3.0\,\mathrm{GeV}/c$. The ratio of the higher to low $p_\mathrm{T}$ results is shown in the bottom panel of Fig.~\ref{fig:v2mult}, showing about $1\%$ increase within the uncertainties.
+
 
 \subsection{Event-scale dependence}
 \begin{figure}[h!]
@@ -53,3 +52,47 @@ In Fig.\ref{fig:v2mult} the magnitude of $v_2$ as a function of multiplicity is 
 Figure~\ref{fig:LPjet23} presents the extracted magnitude of $v_2$ and $v_3$ as function of the minimum $\ptlead$ ($\it{p}^{\rm{LP}}_{\rm{T,min}}$) and $\ptjet$ ($\it{p}^{\rm{jet}}_{\rm{T,min}}$) selections. Both event scale results are obtained from pp collisions at 13 TeV for the multiplicity class of $0-0.1\%$. In these results the leading particle is required to be within $|\eta|<0.9$ and the jets are reconstructed using the anti$-k_\mathrm{T}$ algorithm with R=0.4 and are required to be within $|\eta|<0.4$. Both $v_2$ and $v_3$ do not show any dependence on event-scale selection within the uncertainties, similarly for the ridge yields~\cite{ALICE:2021nir} and $v_{2}$ measurements  with a tagged $Z$ boson from the ATLAS collaboration~\cite{Aaboud:2019mcw}.
 %The $\pythiashoving$ model describes the ridge yields qualitatively while the $\epos$ model overestimating the ridge yield.
 While  EPOS LHC (PYTHIA8 String Shoving) model shows a strong (weak)  event-scale dependence and two models show different jet yields, it would be interesting to check how flow coefficients are related to the event-scale selections. However, up to date, it is not possible to extract flow coefficients with this LM-template method for these models because both models exhibit flow or ridge signals in LM events.
+
+\section{Comparisons with models and other experiments}
+\label{sec:theory}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.45 \textwidth]{figures/Fig6_v2Mult_allSystems_Hydro.pdf} 
+	\caption{The $v_2$ magnitude for two different collision systems, pp and p-Pb, as a function of multiplicity in the mid-rapidity. Additionally, two different $p_\mathrm{T}$ bins, $1.0<p_\mathrm{T}<2.0$ GeV/c and $1.0<p_\mathrm{T}<4.0$ GeV/c, are presented for pp collisions. The systems are differentiated with two different markers, circles and rhombuses, for pp and p-Pb respectively. The $p_\mathrm{T}$ bins, are differentiated with different colored markers; black for the $1.0<p_\mathrm{T}<2.0$ GeV/c bin and red for the $1.0<p_\mathrm{T}<4.0$ GeV/c bin. In the bottom panel, the ratio $1.0<p_\mathrm{T}<4.0$ bin over the $1.0<p_\mathrm{T}<2.0$ GeV/c bin is presented for pp-collisions and the statistical and systematic errors are combined in quadrature.} 
+	\label{fig:v2mult_model}
+\end{figure}
+
+The results from p--Pb collisions are compared to the hydrodynamical calculations using the parametrization from an improved global Bayesian analysis using new sophisticated collective flow observables from two beam energies in Pb--Pb collisions~\cite{Parkkila:2021yha}. This hydrodynamic model, {T\raisebox{-.5ex}{R}ENTo}+iEBE-VISHNU, consists of the {T\raisebox{-.5ex}{R}ENTo} model~\cite{Moreland:2014oya} for the initial condition, which is connected with a free streaming to a 2+1 dimensional causal hydrodynamic model VISH2+1~\cite{Shen:2014vra}. The evolution is continued after particlization with the UrQMD model~\cite{Bass:1998ca,Bleicher:1999xi}. The initial conditions, $\eta/s(T)$, $\zeta/s(T)$ and other free parameters of the hybrid model are extracted in a global Bayesian analysis.
+%incorporating constraints measured from a Pb--Pb collision system at $\sqrt{s_\mathrm{NN}}=5.02\,\mathrm{TeV}$.
+A model calculation with the best-fit parameterization chosen by maximum a posteriori (MAP) for Pb--Pb collisions at $\sqrt{s_{\text{NN}}}=5.02$~TeV as they are reported in Ref.~\cite{Parkkila:2021yha} is performed. All the kinematic cuts such as transverse momentum and pseudorapidity intervals are matched with the data reported in this article. The flow coefficients in the hydrodynamic calculation are extracted with the two-particle cumulant method, as the results are not affected by the away-side non-flow.
+
+Figure~\ref{fig:v2mult_model} presents the model comparisons of the $v_2$. It is found that {T\raisebox{-.5ex}{R}ENTo}+iEBE-VISHNU underestimates the data by large margin. Whereas the data shows a subtle centrality dependence with increasing values at larger multiplicities, {T\raisebox{-.5ex}{R}ENTo}+iEBE-VISHNU predicts low values at higher multiplicities and higher values and low multiplicities, similarly as is found in large collision systems~\cite{Acharya:2020taj}. The large discrepancies in the prediction can possibly be alleviated by inclusion of the newly measured p--Pb constraints in a future Bayesian parameter estimation, as well as by the improvement of the initial condition model for the small collision systems.
+%comparison to ATLAS??
+%
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.45 \textwidth]{figures/Fig7_v2Mult_allSystemsATLAS.pdf} 
+	\includegraphics[width=0.45 \textwidth]{figures/nch_smallsystem.pdf} 
+	\caption{Left: A comparison between the results from ALICE and ATLAS experiments of the $v_2$ magnitude for two different collision systems, pp and p-Pb, as a function of the ATLAS definition of multiplicity. Right:} 
+	\label{fig:v2multATLAS}
+\end{figure}
+
+The results of the extracted $v_2$ magnitude for pp and p--Pb collisions are compared to the ATLAS results, using the same method for extraction of the flow coefficients, in Fig.\ref{fig:v2multATLAS}. Since the definition of reference multiplicity is different between the experiments (see Tab.~\ref{tab:NchDef}) it is hard to directly compare these results. In order to compare apples to apples, the ALICE data points in this figure have been converted to the ATLAS definition of multiplicity according to the method described in \textcolor{red}{reference AN about mapping}.
+
+\begin{table}[h]
+	\centering
+	\caption{The definition of the reference multiplicity in ALICE and ATLAS Experiments}
+	%\large{
+	\label{tab:NchDef}
+	\begin{tabular}{|c|c|c|}
+		\hline
+		 & ALICE &  ATLAS \\
+		 \hline
+	    pp& V0M multiplicity percentile& ${N_\mathrm{ch}}^\mathrm{reco}$ in $|\eta|<2.5 ~\&~ {p_\mathrm{T}>0.4}$ \\
+	    p--Pb& V0A multiplicity percentile & ${N_\mathrm{ch}}^\mathrm{reco}$ in $|\eta|<2.5 ~\&~ {p_\mathrm{T}>0.4}$  \\
+		\hline
+	\end{tabular}
+\end{table}
+
+The ALICE results values for p--Pb are slightly higher than ATLAS. The values for the ALICE pp collisions is approaching zero more rapidly than ATLAS when going towards lower multiplicity, but agrees within uncertainty from ${N_\mathrm{ch}}^\mathrm{rec}\approx50$ and higher.
